--- a/specification.tex
+++ b/specification.tex
@@ -2,10 +2,9 @@
 \PassOptionsToPackage{unicode}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
 %
-\documentclass[
-]{article}
-\author{}
-\date{}
+\documentclass[]{article}
+% \author{}
+% \date{}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -135,9 +134,7 @@ provides not only vector graphics, but also a full suite for animation
 and JavaScript scripting. Implementing a new SVG renderer from scratch
 is a tremendous amount of work, and it is hard to get it done right.
 
-Quoting the
-\href{https://de.wikipedia.org/wiki/Scalable_Vector_Graphics}{german
-Wikipedia}:
+Quoting the \href{https://de.wikipedia.org/wiki/Scalable_Vector_Graphics}{german Wikipedia}:
 
 \begin{quote}
 Praktisch alle relevanten Webbrowser können einen Großteil des
