Adds file extension and mime type.

--- a/specification.tex
+++ b/specification.tex
@@ -194,10 +194,13 @@ the more important priority.
   used as good as possible.
 \end{itemize}
 
-\hypertarget{format}{%
-\subsection{Format}\label{format}}
+\hypertarget{recognition}{\subsection{Recognizing TinyVG}\label{recognition}}
 
-TVG files are roughly structured like this:
+TinyVG is using the \texttt{.tvg} file extension and should use the \texttt{image/x-tinyvg} mime type.
+
+\hypertarget{format}{\subsection{Format}\label{format}}
+
+TinyVG files are roughly structured like this:
 
 \includegraphics{graphics/overview.pdf}
 
