revert one change

--- a/specification.tex
+++ b/specification.tex
@@ -1221,7 +1221,7 @@ This instruction doesn't have additional data encoded.
 \hypertarget{quadratic-bezier}{%
 \paragraph{Quadratic Bézier}\label{quadratic-bezier}}
 
-The quadratic Bézier instruction draws a Bézier curve with a single
+The quadratic bezier instruction draws a Bézier curve with a single
 control point.
 
 \begin{longtable}[]{@{}p{1in}p{2in}p{3in}@{}}
