Improves specification title.

--- a/specification.tex
+++ b/specification.tex
@@ -113,15 +113,46 @@
 
 \begin{document}
 
-\hypertarget{tiny-vector-graphics-specification}{%
-\section{Tiny Vector Graphics(Specification)}\label{tiny-vector-graphics-specification}}
 
-\begin{abstract}
-The tiny vector graphics format is a binary file
-format that encodes a list of vector graphic primitives. It is tailored
-to have a tiny memory footprint and simple implementations, while
-lifting small file size over encoding simplicity.
-\end{abstract}
+\begin{titlepage}
+  \begin{center}    
+      \vspace*{1cm}
+
+      \includegraphics[height=20cm]{design/logo.pdf}
+
+      \vspace*{1cm}
+          
+      %\
+      %\textbf{Tiny Vector Graphics}
+          
+      \Huge Specification\\
+      \vspace{0.5cm}
+      \LARGE (Working Draft)
+          
+      \vfill
+          
+      % A thesis presented for the degree of Doctor of Philosophy
+
+      \begin{abstract}
+      \Large
+      The tiny vector graphics format is a binary file
+      format that encodes a list of vector graphic primitives. It is tailored
+      to have a tiny memory footprint and simple implementations, while
+      lifting small file size over encoding simplicity.
+      \end{abstract}
+          
+      \vspace{0.8cm}
+          
+      %\Large
+      %Department Name\\
+      %University Name\\
+      %Country\\
+      %Date
+          
+  \end{center}
+\end{titlepage}
+
+
 
 
 \hypertarget{introduction}{%
